[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/UI/menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/mythology_of_egypt/Mythology Of Egypt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/input_button/ActionDisplay.gd" type="Script" id=3]
[ext_resource path="res://resources/ui/backgrounds/game_background_3.1.png" type="Texture" id=4]
[ext_resource path="res://resources/themes/default.tres" type="Theme" id=7]
[ext_resource path="res://resources/fonts/made_tommy/MADE TOMMY Regular_PERSONAL USE.otf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 22
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 22
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 8 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
margin_right = 424.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 60
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 60.0
margin_right = 404.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "Mahur"
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 139.0
margin_right = 384.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 2 )
text = "el último Runalún"
align = 1

[node name="Label3" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 610.0
margin_right = 384.0
margin_bottom = 640.0
size_flags_vertical = 10
custom_fonts/font = SubResource( 4 )
text = "2022. Federico Pacheco"

[node name="Control2" type="Control" parent="CanvasLayer/HBoxContainer"]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control3" type="Control" parent="CanvasLayer/HBoxContainer"]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayBtn" type="Button" parent="CanvasLayer/HBoxContainer/Control3"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -424.0
margin_top = -80.0
theme = ExtResource( 7 )
theme_type_variation = "MainMenuButton"
text = "Jugar"

[node name="OptionsBtn" type="Button" parent="CanvasLayer/HBoxContainer/Control3"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -424.0
margin_top = 20.0
margin_bottom = 100.0
theme = ExtResource( 7 )
theme_type_variation = "MainMenuButton"
text = "Opciones"

[node name="QuitBtn" type="Button" parent="CanvasLayer/HBoxContainer/Control3"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -424.0
margin_top = 120.0
margin_bottom = 200.0
theme = ExtResource( 7 )
theme_type_variation = "MainMenuButton"
text = "Salir"

[node name="Control" type="Control" parent="CanvasLayer/HBoxContainer/Control3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -420.0
margin_top = -100.0

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Control3/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -147.0
margin_top = -51.0
margin_right = -65.0
margin_bottom = -23.0
custom_fonts/font = SubResource( 3 )
text = "Aceptar"

[node name="ActionDisplay" type="Node2D" parent="CanvasLayer/HBoxContainer/Control3/Control"]
position = Vector2( 380, 60 )
script = ExtResource( 3 )
key_code = -1

[connection signal="pressed" from="CanvasLayer/HBoxContainer/Control3/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Control3/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Control3/QuitBtn" to="." method="_on_QuitBtn_pressed"]
